<resources>
    <string name="app_name">AnchorBooks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="author">Author:</string>
    <string name="country">Country:</string>
    <string name="language">Language:</string>
    <string name="price">New Price:</string>
    <string name="last_price">Last Price:</string>
    <string name="pages">Pages:</string>
    <string name="buy">BUY</string>
    <string name="mail">ventas@anchorBooks.cl</string>
    <string name="mailSubject">Consulta por libro %1$s id %2$s</string>
    <string name="mailText">Hola \n\n Vi el libro %1$s de código %2$s y me gustaría que me
        contactaran a este correo o al \n siguiente número _________. \n\n Quedo atento.</string>
</resources>