<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBookDetail"
            android:layout_width="202dp"
            android:layout_height="209dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="0" />

        <ImageView
            android:id="@+id/ivDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="35dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_delivery"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvTitleD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvAuthorDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/author" />

        <TextView
            android:id="@+id/tvAuthorD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvLastPriceDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/last_price" />

        <TextView
            android:id="@+id/tvLastPriceD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPriceDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/price" />

        <TextView
            android:id="@+id/tvPriceD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPagesDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/pages" />

        <TextView
            android:id="@+id/tvPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:textSize="18sp" />

        <WebView
            android:id="@+id/wvWiki"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>