<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivBooks"
        android:layout_width="156dp"
        android:layout_height="237dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthorT" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryT" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguageT" />

    <TextView
        android:id="@+id/tvAuthorT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/author"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvCountryT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/country"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

    <TextView
        android:id="@+id/tvLanguageT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/language"
        app:layout_constraintStart_toEndOf="@+id/ivBooks"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />
</androidx.constraintlayout.widget.ConstraintLayout>